main page bg video replaced by bg img

--- a/index.html
+++ b/index.html
@@ -98,33 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="bbHeroSection" class="hero default section"
-                     data-backup="https://www.jhu.edu/assets/uploads/2014/08/18-800x400.jpg"
-                     data-mp4="https://www.jhu.edu/assets/uploads/2017/08/Segment-33-no-logo.mp4"
-                     data-webm="https://www.jhu.edu/assets/uploads/2017/08/Segment-33-no-logo.webmhd.webm"
-                     data-poster="https://www.jhu.edu/assets/uploads/2017/08/Segment-33-no-logo.jpg"
-                     data-autoplay="autoplay"
-                     data-preload="auto"
-                     data-muted="muted"
-                     data-loop="3">
-                    <script type="application/json">[{"clip_shortname":"Eclipse","start_at":"0","title":"","caption":"<p>On Aug. 21, 2017, hundreds of people eager to catch some partially obstructed rays <a href=\"https:\/\/hub.jhu.edu\/2017\/08\/22\/solar-eclipse-party-johns-hopkins\/\">gathered on The Beach at our Homewood campus<\/a> for the solar eclipse.<\/p>\n"},{"clip_shortname":"Hanging Garden","start_at":"9","title":"","caption":"<p>Johns Hopkins Carey Business School grad <a href=\"https:\/\/hub.jhu.edu\/magazine\/2015\/fall\/hydroponic-rooftop-farms\/\">J.J. Reidy founded Urban Pastoral<\/a>, a Baltimore-based company that specializes in space-efficient vertical farming.<\/p>\n"},{"clip_shortname":"Violin","start_at":"18","title":"","caption":"<p>The renowned <a href=\"https:\/\/studentaffairs.jhu.edu\/hso\/\">Hopkins Symphony Orchestra<\/a>, established in 1981, is open to Hopkins students not majoring in music, as well as to JHU faculty, staff, alumni, and community musicians.<\/p>\n"}]</script>
-                    <div class="sticky">
-                        <div class="fullwidth fullheight">
-                            <div class="content">
-                                <div class="centerme">
-                                    <img class="logo horizontal-logo svg" src="theme/images/logos/university-logo-small-horizontal-white-156eae9527.svg" alt="Johns Hopkins University" />
-                                    <img class="logo vertical-logo svg" src="theme/images/logos/university-logo-small-vertical-white-84797ad38b.svg" alt="Johns Hopkins University" />
-                                    <img class="logo horizontal-logo svg-fallback" src="theme/images/logos/university-logo-small-horizontal-white-43ab279882.png" alt="Johns Hopkins University" />
-                                    <img class="logo vertical-logo svg-fallback" src="theme/images/logos/university-logo-small-vertical-white-87a5d6072d.png" alt="Johns Hopkins University" />
-                                </div>
-                                <img src="assets/uploads/2014/08/18-800x400.jpg" class="backup-nojs fullwidth" alt="Homewood Campus" />
-                                <div class="while-loading" style="background-image: url(assets/uploads/2017/08/Segment-33-no-logo.jpg);"></div>
-                                <p class="visuallyhidden" id="hero-video-description">Three short video clips: Students gaze skyward to the solar eclipse; young man examines rows of green leaves hanging in vertical farm setting; a young woman plays the violin in a concert orchestra</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <script>setHeroHeight()</script>
+                <div id="bbHeroSection" class="hero default section"> </div>
             </div>
 
             <!--googleoff: all-->
